--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 *txt
 chromedriver.exe
+lesson_6.1/__pycache__/test_auth_form.cpython-311-pytest-8.2.0.pyc
+lesson_6.1/__pycache__/test_calculator.cpython-311-pytest-8.2.0.pyc
+__pycache__
